--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,3 +38,20 @@ h1 {
 html {
 	scroll-behavior: smooth;
 }
+
+@keyframes scroll {
+	0% {
+		transform: translateX(0);
+	}
+	100% {
+		transform: translateX(-100%);
+	}
+}
+
+.animate-scroll {
+	animation: scroll 30s linear infinite;
+}
+
+.animate-pause {
+	animation-play-state: paused;
+}
